--- a/css/stylec.css
+++ b/css/stylec.css
@@ -101,7 +101,7 @@ body .const:hover {
 .header {
   padding: 15px 10px;
   position: fixed;
-  width: -webkit-fill-available;
+  width: 100%;
   z-index: 999;
   background-color: #fff;
   box-shadow: 0px 1px 6px 1px #77777745;
